REST/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-plaintext-rest-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-plaintext-rest-proxy
  template:
    metadata:
      labels:
        app: kafka-plaintext-rest-proxy
    spec:
      containers:
      - name: kafka-plaintext-rest-proxy
        image: confluentinc/cp-kafka-rest:latest
        ports:
        - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-plaintext-rest-proxy-service
spec:
  selector:
    app: kafka-plaintext-rest-proxy
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
