REST/Rest-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-rest-proxy-ingress
  namespace: fenton-neuroscience
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Kafka REST"
spec:
  rules:
  - host: kafka.hsrn.nyu.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-rest-proxy-service
            port:
              number: 8082
